correction du footer et pop-up historique

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <div class="historique-pop">
    <a>modifier le profil</a>
    <a>nouveau</a>
-   <a>bloquee</a>
+   <a> liste noire</a>
 </div>
 <!-- POP-UPS  -->
 
